Fix vertical-align for eye eleement.
It wanted only for webkit browsers. In other engines it is ignored and works fine

--- a/result/css/encoins.webflow.css
+++ b/result/css/encoins.webflow.css
@@ -2275,3 +2275,26 @@ body {
   display:flex;
   flex-direction: column;
 }
+
+.app-Input_Password {
+  display: inline-block;
+  width: 100%;
+  height: 38px;
+  padding: 8px 12px;
+  margin-bottom: 10px;
+  font-size: 14px;
+  line-height: 1.42857143;
+  color: #333333;
+  background-color: #ffffff;
+  border: 1px solid #cccccc;
+  vertical-align: -webkit-baseline-middle;
+}
+.app-Input_Password:focus {
+  border-color: #3898EC;
+  outline: 0;
+}
+
+.app-Eye_Input {
+  cursor:pointer;
+  margin-left: -30px;
+}
